feat(protocol): migrate java-compiler to the unified wire + structured diagnostics
- JavaCompilerPlugin reads PluginSpec (release via config, class/source outputs
  via layout, sources via source lines, compile/processor cp by role) and emits
  diagnostic/provenance/result/done via PluginReply.
- Structured diagnostics: InProcessJavac.Diag now carries file/line/col (it
  previously folded the location into the message string and dropped it on the
  wire); ForkedJavac parses them into CompileResult.Diagnostic (was null/0/0).
- Engine driver WorkerJavac -> ForkedJavac (retire "Worker"; the strategy-level
  JavacDriver already exists and is untouched); writes the NDJSON spec via
  SpecWriter, parses by PluginProtocol constants.

Verified: java-compiler + engine incremental/ForkedJavac tests + full compile green.